# generator-standard-readme-rust

./: Cargo.toml  README.md  cliff.toml  clippy.toml  cross-compile-bins.sh  download.ps1  release.sh
.cargo/: config.toml
src/: data_types.rs  main.rs  prompt.rs  prompt_generate.rs  templates.rs
templates/: README-de.md  README.md
