[package]
name = "generator-standard-readme-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "std", "help", "error-context"], default-features = false }
convert_case = "0.6.0"
derive_more = "0.99.17"
fancy-regex = "0.13.0"
git2 = { version = "0.18.1", default-features = false }
inquire = "0.6.2"
paste = "1.0.14"
serde = { version = "1.0.195", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary

[[bin]]
name = "standard-readme"
bench = false
path = "src/main.rs"
